@@ -51,6 +51,7 @@ static symbol_t symbols[] = {
 	{"*", 1, NULL},
 	{"-", 1, NULL},
 	{"/", 1, NULL},
+	{"\\", 1, NULL},
 	{"[", 1, NULL},
 	{"]", 1, NULL},
 	{"(", 1, NULL},
